--- a/views/index.html
+++ b/views/index.html
@@ -4,26 +4,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Blank</title>
+    <title>My API</title>
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="/styles/styles.css">
 
-    <!-- VENDOR SCRIPTS -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-
     <!-- APPLICATION SCRIPTS -->
-    <script src="/scripts/app.js"></script>
+    <!-- <script src="/scripts/app.js"></script> -->
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Under Construction</h1>
-          <h4><a href="/api">Read My API Documentation</a></h4>
+          <h1>Campsites</h1>
+            <ul>
+              <li><a href="/api/">API Docs</a></li>
+              <li><a href="/api/profile">Who I am</a></li>
+              <li><a href="/api/workhistory">Work history</a></li>
+            </ul>
         </div>
       </div>
+
+
+
+        <div id="results" class="work-results"></div>
     </div>
   </body>
 </html>
