--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,10 +1,10 @@
 body {
   color: #333;
   font-family: Helvetica, Arial, sans-serif;
-  background-color: skyblue; /* Sanity Check! */
 }
 
 h1 {
-  margin-top: 100px;
+  margin-top: 3%;
   text-align: center;
 }
+
