added some basic styling

--- a/views/index.html
+++ b/views/index.html
@@ -5,18 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>My API</title>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="/styles/styles.css">
-
-    <!-- APPLICATION SCRIPTS -->
-    <!-- <script src="/scripts/app.js"></script> -->
+    <link rel="stylesheet" href="/styles/homepageStyles.css">
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1>Campsites</h1>
+          <h1>Personal API</h1>
             <ul>
               <li><a href="/api/">API Docs</a></li>
               <li><a href="/api/profile">Who I am</a></li>
