--- a/views/workhistory.html
+++ b/views/workhistory.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>My API</title>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
+
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/workhistory.css">
 
     <!-- APPLICATION SCRIPTS -->
     <script src="/scripts/app.js"></script>
   </head>
   <body>
     <div class="container">
-      
+
         <form id="workForm" class="work-form">
-          <input type="text" id="workName" name="name" placeholder="Name" />
+          <input type="text" id="workName" name="name" placeholder="Title" />
           <input type="text" id="workType" name="type" placeholder="Type" />
           <input type="submit" value="Submit" />
         </form>
