--- a/views/workhistory.html
+++ b/views/workhistory.html
@@ -17,13 +17,14 @@
   </head>
   <body>
     <div class="container">
-
+        <!-- FORM -->
         <form id="workForm" class="work-form">
           <input type="text" id="workName" name="name" placeholder="Title" />
           <input type="text" id="workType" name="type" placeholder="Type" />
           <input type="submit" value="Submit" />
         </form>
-
+        
+        <!-- TEXT SHOWING WORK HISTORY -->
         <div id="results" class="work-results"></div>
     </div>
   </body>
