--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,12 @@
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
 
+    <!-- jQuery -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.js"
+      integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA="
+      crossorigin="anonymous"></script>
+ 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="/styles/homepageStyles.css">
   </head>
@@ -21,12 +27,10 @@
               <li><a href="/api/profile">Who I am</a></li>
               <li><a href="/api/workhistory">Work history</a></li>
             </ul>
+
+            <button class="redirect"><a href="/workhistory">Add a new item</a></button>
         </div>
       </div>
-
-
-
-        <div id="results" class="work-results"></div>
     </div>
   </body>
 </html>
